[gd_scene load_steps=25 format=3 uid="uid://brn3assiyadxe"]

[ext_resource type="Script" path="res://demo/subscenes/mash_wheel_with_drain.gd" id="1_g72a8"]
[ext_resource type="PackedScene" uid="uid://ccy07coqyd1kq" path="res://DROW.tscn" id="2_o3s1a"]
[ext_resource type="Script" path="res://wheel_slice_data.gd" id="3_pff0f"]
[ext_resource type="Script" path="res://wheel_segment_data.gd" id="4_5ipat"]

[sub_resource type="Resource" id="Resource_ectq5"]
script = ExtResource("3_pff0f")
color = Color(1, 0.2, 0, 1)
value = 0

[sub_resource type="Resource" id="Resource_4ru5p"]
script = ExtResource("3_pff0f")
color = Color(1, 0.2, 0, 1)
value = 0

[sub_resource type="Resource" id="Resource_snsnu"]
script = ExtResource("3_pff0f")
color = Color(1, 0.2, 0, 1)
value = 0

[sub_resource type="Resource" id="Resource_b7mc2"]
script = ExtResource("3_pff0f")
color = Color(1, 0.2, 0, 1)
value = 0

[sub_resource type="Resource" id="Resource_8oq8k"]
script = ExtResource("3_pff0f")
color = Color(1, 0.2, 0, 1)
value = 0

[sub_resource type="Resource" id="Resource_6v2aj"]
script = ExtResource("4_5ipat")
color = Color(1, 1, 1, 1)
value = -1
selectable = true

[sub_resource type="Resource" id="Resource_m66c6"]
script = ExtResource("4_5ipat")
color = Color(1, 1, 1, 1)
value = -2
selectable = true

[sub_resource type="Resource" id="Resource_un1ct"]
script = ExtResource("4_5ipat")
color = Color(1, 1, 1, 1)
value = -3
selectable = true

[sub_resource type="Resource" id="Resource_51hax"]
script = ExtResource("4_5ipat")
color = Color(1, 1, 1, 1)
value = -2
selectable = true

[sub_resource type="Resource" id="Resource_yu1ip"]
script = ExtResource("4_5ipat")
color = Color(1, 1, 1, 1)
value = -1
selectable = true

[sub_resource type="Gradient" id="Gradient_xpmcq"]
colors = PackedColorArray(0.532108, 0.870836, 0.362331, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yhodk"]
gradient = SubResource("Gradient_xpmcq")
width = 32
height = 32
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_e72qg"]
offsets = PackedFloat32Array(0, 0.167598)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_km0a7"]
gradient = SubResource("Gradient_e72qg")
width = 50
height = 50

[sub_resource type="Gradient" id="Gradient_n8xbc"]
colors = PackedColorArray(0.532108, 0.870836, 0.362331, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_73jhn"]
gradient = SubResource("Gradient_n8xbc")
width = 32
height = 32
fill_from = Vector2(1, 1)
fill_to = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_j3qu1"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.167598)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0ciyj"]
gradient = SubResource("Gradient_j3qu1")
width = 50
height = 50

[sub_resource type="LabelSettings" id="LabelSettings_jndtq"]
font_size = 144
font_color = Color(0.57, 1, 0.613, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_tksi2"]
font_size = 144
font_color = Color(1, 0.57, 0.57, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[node name="MashWheel" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g72a8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DROW" parent="VBoxContainer" instance=ExtResource("2_o3s1a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(520, 520)
layout_mode = 2
selector_active = false
disable_selected_segments = false
rotate_on_selection = false
overlay_color = Color(0.978957, 0.363581, 0.282652, 1)
outer_border_thickness = 20.0
inner_border_thickness = 10.0
selector_color = Color(1, 1, 1, 1)
cover_color = Color(0.273873, 0.273873, 0.273873, 0.568627)
max_multiplier_value = 100
multiplier_slice_data = Array[ExtResource("3_pff0f")]([SubResource("Resource_ectq5"), SubResource("Resource_4ru5p"), SubResource("Resource_snsnu"), SubResource("Resource_b7mc2"), SubResource("Resource_8oq8k")])
value_segment_data = Array[ExtResource("4_5ipat")]([SubResource("Resource_6v2aj"), SubResource("Resource_m66c6"), SubResource("Resource_un1ct"), SubResource("Resource_51hax"), SubResource("Resource_yu1ip")])

[node name="TimerContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(550, 50)
layout_mode = 2
theme_override_constants/separation = 0

[node name="TimerBar" type="TextureRect" parent="VBoxContainer/TimerContainer"]
unique_name_in_owner = true
self_modulate = Color(1, 0.39, 0.39, 1)
custom_minimum_size = Vector2(500, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_yhodk")
expand_mode = 1

[node name="TimerCap" type="TextureRect" parent="VBoxContainer/TimerContainer"]
self_modulate = Color(1, 0.53, 0.53, 1)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_km0a7")

[node name="ScoreContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(550, 50)
layout_mode = 2
theme_override_constants/separation = 0

[node name="ScoreBar" type="TextureRect" parent="VBoxContainer/ScoreContainer"]
unique_name_in_owner = true
self_modulate = Color(0.205138, 0.724113, 0.516817, 1)
custom_minimum_size = Vector2(500, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_73jhn")
expand_mode = 1

[node name="Spacer" type="ColorRect" parent="VBoxContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 0)

[node name="ScoreCap" type="TextureRect" parent="VBoxContainer/ScoreContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_0ciyj")

[node name="WinLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "DRAIN
UNCLOGGED
"
label_settings = SubResource("LabelSettings_jndtq")
horizontal_alignment = 1

[node name="LoseLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "FLUSHED AWAY"
label_settings = SubResource("LabelSettings_tksi2")
horizontal_alignment = 1

[connection signal="new_segment_chosen" from="VBoxContainer/DROW" to="." method="_process_mash"]
[connection signal="render_finished" from="VBoxContainer/DROW" to="." method="_update_score_bar"]
